<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.rohan.callnote2.fragments.AddNoteFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:textStyle="bold"
            android:id="@+id/add_note_call_name_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:fontFamily="serif"
            android:gravity="center"
            android:text="Rohan Taneja"
            android:textSize="22sp"/>

        <LinearLayout
            android:id="@+id/add_note_call_details_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/add_note_call_name_text_view"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/add_note_call_type_image_view"
                android:layout_width="0dp"
                android:layout_weight="0.25"
                android:layout_height="40dp"
                android:contentDescription="@string/call_type"
                android:paddingEnd="5dp"
                android:paddingStart="0dp"
                android:src="@drawable/ic_call_made_green_300_18dp"/>

            <TextView
                android:id="@+id/add_note_call_number_text_view"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical|end"
                android:paddingEnd="8dp"
                android:paddingStart="0dp"
                android:text="+919898989898"
                android:textSize="18sp"
                />

            <TextView
                android:id="@+id/add_note_call_date_text_view"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Jul 10, 21:37"
                android:textSize="16sp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/add_note_buttons_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="8dp">

            <Button
                android:id="@+id/add_note_cancel_button"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_border_drawable"
                android:text="@string/cancel"
                android:textAllCaps="true"
                android:theme="@style/MyButton"/>

            <Button
                android:id="@+id/add_note_save_button"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="4dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_border_drawable"
                android:text="@string/save"
                android:textAllCaps="true"
                android:theme="@style/MyButton"/>

        </LinearLayout>

        <EditText
            android:id="@+id/add_note_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/add_note_buttons_linear_layout"
            android:layout_below="@id/add_note_call_details_linear_layout"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/rounded_border_drawable"
            android:fontFamily="serif"
            android:gravity="start"
            android:hint="@string/note_hint"
            android:inputType="textCapSentences"
            android:labelFor="@string/edit_text_talk_back"
            android:paddingBottom="4dp"
            android:paddingEnd="4dp"
            android:paddingStart="8dp"
            android:paddingTop="8dp"
            android:textSize="16sp"
            tools:ignore="LabelFor"/>

    </RelativeLayout>

</android.support.v7.widget.CardView>